--- a/pages/case-study-art-tim.html
+++ b/pages/case-study-art-tim.html
@@ -121,18 +121,6 @@
     <section class="py-24">
         <div class="max-w-4xl mx-auto px-6 space-y-24">
 
-            <!-- Client -->
-            <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
-                <h2 class="text-2xl font-display font-bold text-primary">O Kliencie</h2>
-                <div>
-                    <p class="text-lg text-gray-700 leading-relaxed">
-                        Art-Tim to dynamicznie rozwijająca się firma kurierska z oddziałami w Katowicach, Wrocławiu i
-                        Legnicy. Zarządzanie rozproszoną flotą pojazdów przy rosnącej skali działalności stało się
-                        kluczowym wyzwaniem operacyjnym.
-                    </p>
-                </div>
-            </div>
-
             <!-- Challenge -->
             <div class="grid md:grid-cols-[1fr_2fr] gap-12 items-start">
                 <h2 class="text-2xl font-display font-bold text-primary">Wyzwanie</h2>
@@ -176,14 +164,13 @@
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">1. Centralna Baza Danych</h3>
-                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach,
-                                kierowcach i trasach.</p>
+                            <p class="text-gray-600">Jeden system gromadzący wszystkie informacje o pojazdach.</p>
                         </div>
                         <div class="relative">
                             <span
                                 class="absolute -left-[41px] top-0 w-6 h-6 rounded-full bg-accent border-4 border-background"></span>
                             <h3 class="text-xl font-bold mb-2">2. Automatyczne Przypomnienia</h3>
-                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń, przeglądów i wymian opon,
+                            <p class="text-gray-600">System sam pilnuje terminów ubezpieczeń i przeglądów,
                                 wysyłając powiadomienia z wyprzedzeniem.</p>
                         </div>
                         <div class="relative">
@@ -213,7 +200,7 @@
                                 <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Oszczędność czasu zarządu</span>
+                                <span>Oszczędność czasu</span>
                                 <span class="text-xl font-bold text-green-600">Znaczna</span>
                             </div>
                         </div>
