Add favicon, update calculator to 30%, update footer social links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fluinty - Automatyzacja Przyszłości</title>
     <meta name="description"
         content="Fluinty - Automatyzuj, Optymalizuj, Rozwijaj. Przyszłość Twojego biznesu zaczyna się tutaj.">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1123,7 +1124,7 @@
                         <form action="https://api.web3forms.com/submit" method="POST" class="space-y-6">
                             <input type="hidden" name="access_key" value="fe91fdb3-2491-4463-8b53-77ab7adef895">
                             <input type="hidden" name="subject" value="Nowe zgłoszenie z Fluinty">
-                            
+
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="modal-name" class="block text-sm font-medium text-text-main mb-2">Imię i
@@ -1162,15 +1163,13 @@
     <footer class="bg-surface border-t border-white/5 py-12">
         <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-8">
             <div class="text-center md:text-left">
-                <a href="#" class="text-2xl font-display font-bold tracking-tighter text-white">fluinty.</a>
+                <a href="#"
+                    class="text-2xl font-display font-bold tracking-tighter bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent">fluinty.</a>
                 <p class="text-gray-500 text-sm mt-2">Automatyzacja przyszłości.</p>
             </div>
             <div class="flex gap-6">
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="linkedin"
-                        class="w-5 h-5"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="twitter"
-                        class="w-5 h-5"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="facebook"
+                <a href="https://www.linkedin.com/company/fluinty/" target="_blank" rel="noopener noreferrer"
+                    class="text-gray-400 hover:text-white transition-colors"><i data-lucide="linkedin"
                         class="w-5 h-5"></i></a>
             </div>
             <div class="text-gray-500 text-sm">
