Update content for case study pages

--- a/pages/case-study-art-tim.html
+++ b/pages/case-study-art-tim.html
@@ -198,11 +198,11 @@
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Ryzyko kar finansowych</span>
-                                <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
+                                <span class="text-xl font-bold text-green-600">0%</span>
                             </div>
                             <div class="flex items-center justify-between">
                                 <span>Oszczędność czasu</span>
-                                <span class="text-xl font-bold text-green-600">Znaczna</span>
+                                <span class="text-xl font-bold text-green-600">~40h / msc</span>
                             </div>
                         </div>
                     </div>
