--- a/pages/case-study-eticod.html
+++ b/pages/case-study-eticod.html
@@ -213,7 +213,7 @@
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Błędy przy wprowadzaniu</span>
-                                <span class="text-xl font-bold text-green-600">Wyeliminowane</span>
+                                <span class="text-xl font-bold text-green-600">0</span>
                             </div>
                             <div class="flex items-center justify-between">
                                 <span>Czas reakcji na zamówienie</span>
