--- a/pages/case-study-pups-choice.html
+++ b/pages/case-study-pups-choice.html
@@ -213,8 +213,8 @@
                                 <span class="text-xl font-bold text-green-600">20%</span>
                             </div>
                             <div class="flex items-center justify-between">
-                                <span>Satysfakcja Klientów</span>
-                                <span class="text-xl font-bold text-green-600">Wysoka</span>
+                                <span>Wzrost satysfakcji Klientów</span>
+                                <span class="text-xl font-bold text-green-600">80%</span>
                             </div>
                         </div>
                     </div>
@@ -231,21 +231,29 @@
                 <!-- Previous -->
                 <a href="case-study-art-tim.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
-                        <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
+                        <i data-lucide="arrow-left"
+                            class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
                         Poprzednia realizacja
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Art-Tim</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Art-Tim</h3>
                 </a>
 
                 <!-- Next -->
                 <a href="case-study-viivaa.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
                         Następna realizacja
-                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
+                        <i data-lucide="arrow-right"
+                            class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Viivaa.de</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Viivaa.de</h3>
                 </a>
             </div>
         </div>
