--- a/pages/case-study-viivaa.html
+++ b/pages/case-study-viivaa.html
@@ -207,15 +207,15 @@
                         <div class="space-y-6">
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
                                 <span>Czas wdrożenia MVP</span>
-                                <span class="text-xl font-bold text-green-600">Ekspresowy</span>
+                                <span class="text-xl font-bold text-green-600">3 dni</span>
                             </div>
                             <div class="flex items-center justify-between border-b border-gray-200 pb-4">
-                                <span>Pewność siebie kandydatów</span>
-                                <span class="text-xl font-bold text-green-600">Wzrost</span>
+                                <span>Wzrost pewności siebie kandydatów</span>
+                                <span class="text-xl font-bold text-green-600">60%</span>
                             </div>
                             <div class="flex items-center justify-between">
                                 <span>Dopasowanie ofert</span>
-                                <span class="text-xl font-bold text-green-600">Precyzyjne</span>
+                                <span class="text-xl font-bold text-green-600">87%</span>
                             </div>
                         </div>
                     </div>
@@ -232,21 +232,29 @@
                 <!-- Previous -->
                 <a href="case-study-pups-choice.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
-                        <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
+                        <i data-lucide="arrow-left"
+                            class="w-4 h-4 group-hover:-translate-x-1 transition-transform text-primary"></i>
                         Poprzednia realizacja
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Pup's Choice</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Pup's Choice</h3>
                 </a>
 
                 <!-- Next -->
                 <a href="case-study-eticod.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-right">
-                    <div class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
+                    <div
+                        class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 justify-end transition-colors">
                         Następna realizacja
-                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
+                        <i data-lucide="arrow-right"
+                            class="w-4 h-4 group-hover:translate-x-1 transition-transform text-primary"></i>
                     </div>
-                    <h3 class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">Eticod</h3>
+                    <h3
+                        class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
+                        Eticod</h3>
                 </a>
             </div>
         </div>
